--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "devDependencies": {
     "node-fetch": "^3.3.1"
+  },
+  "dependencies": {
+    "@prisma/client": "^4.14.1"
   }
 }
