--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "# no build command"
+  command = "npx prisma generate"
   functions = "netlify/functions"
   publish = "public"
 
